--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* BODY */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,8 +7,103 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+* {
+  font-family: sans-serif, cursive;
+  color: black;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color:#557571 ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+ 
+}
+/* APP  */
+.app {
+  background-color:#af6b58;
+  width: 100%;
+  min-height: 200px;
+  height: min-content;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-evenly;
+}
+/* SCORE SEQMENT */
+.score-segment {
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+}
+
+/* QUESTION SEQMENT*/
+.question-segment {
+  width: 100%;
+  position: relative;
+}
+
+.question-count {
+  margin-bottom: 20px;
+}
+
+.question-count span {
+  font-size: 28px;
+}
+
+.question-text {
+  margin-bottom: 12px;
+  font-size: 16px;
+}
+
+.set-color{
+  color:#557571 ;
+}
+
+/* ANSWERS SEQMENT*/
+.answer-segment {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+/* BUTTON SEQMENT */
+button {
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #af6b58;
+  border-radius: 15px;
+  display: flex;
+  padding: 3px;
+  justify-content: flex-start;
+  align-items: center;
+  border: 3px solid #f2efea;
+  cursor: pointer;
+}
+.result-button{
+  width:25%;
+  align-items:center;
+  background-color: #2f922f;
+}
+button:hover {
+  background-color: #cbbcb1;
+}
+
+button:focus {
+  outline: none;
+  background-color: olive;
+}
+button:visited{
+  background-color: olive;
+}
+button:active{
+  
+  background-color: olive;
+
 }
